# local-TTS-web-app

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  NOTICE  RATIONALE.md  README.md  TTS_open_weight_15_03_2026.md
1-objectives/: CLAUDE.objectives.md  stakeholders.md
1-objectives/assumptions/: ASM-browser-mp3-playback.md  ASM-huggingface-models-available.md  ASM-input-text-quality-varies.md  ASM-internet-for-model-download.md  ASM-text-file-format.md  ASM-user-has-nvidia-gpu.md  _template.md
1-objectives/constraints/: CON-cross-platform.md  CON-gpu-inference.md  CON-nvidia-gpu.md  CON-single-user.md  CON-solo-developer.md  CON-zero-budget.md  _template.md
1-objectives/goals/: GOAL-audio-quality.md  GOAL-audiobook-creation.md  GOAL-audiobook-library.md  GOAL-backend-monitoring.md  GOAL-browser-ui.md  GOAL-easy-deployment.md  GOAL-huggingface-models.md  GOAL-local-tts-synthesis.md  GOAL-quick-tts-preview.md  GOAL-text-normalization.md  GOAL-validate-local-ai-execution.md  _template.md
1-objectives/requirements/: REQ-COMP-foss-only.md  REQ-F-abbreviation-expansion.md  REQ-F-audiobook-playback.md  REQ-F-chapter-split-output.md  REQ-F-default-voice-quality.md  REQ-F-delete-audiobook.md  REQ-F-disk-space-preflight.md  REQ-F-download-audiobook.md  REQ-F-gpu-validation.md  REQ-F-job-monitoring.md  REQ-F-library-listing.md  REQ-F-model-cache-view.md  REQ-F-model-delete.md  REQ-F-model-download.md  REQ-F-model-listing.md  REQ-F-performance-logging.md  REQ-F-playback-resume.md  REQ-F-resource-monitoring.md  REQ-F-synthesis-progress.md  REQ-F-synthesize-audiobook.md  REQ-F-text-layout-repair.md  REQ-F-text-numeric-symbolic-verbalization.md  REQ-F-text-preview.md  REQ-F-text-unicode-sanitization.md  REQ-F-upload-text-file.md  REQ-F-voice-language-selection.md  REQ-MNT-modular-ai-layer.md  REQ-MNT-preprocessing-pipeline.md  REQ-PERF-preprocessing-overhead.md  REQ-PERF-synthesis-latency.md  REQ-PORT-browser-compat.md  REQ-PORT-linux-windows.md  REQ-SEC-localhost-binding.md  REQ-USA-normalized-text-review.md  REQ-USA-simple-setup.md  _template.md
1-objectives/user-stories/: US-browse-audiobook-library.md  US-clean-text-for-tts.md  US-create-audiobook.md  US-delete-audiobook.md  US-deploy-app.md  US-download-audiobook.md  US-evaluate-local-ai.md  US-extensible-text-preprocessing.md  US-manage-models.md  US-monitor-jobs.md  US-play-audiobook.md  US-select-tts-model.md  US-select-voice.md  US-synthesize-text-input.md  _template.md
2-design/: CLAUDE.design.md  api-design.md  architecture.md  data-model.md
2-design/decisions/: DEC-default-italian-language.history.md  DEC-default-italian-language.md  DEC-fastapi-backend.history.md  DEC-fastapi-backend.md  DEC-frontend-dev-env.history.md  DEC-frontend-dev-env.md  DEC-model-license-disclosure.history.md  DEC-model-license-disclosure.md  DEC-preprocess-review-flow.history.md  DEC-preprocess-review-flow.md  DEC-python-backend-env.history.md  DEC-python-backend-env.md  DEC-single-process.history.md  DEC-single-process.md  DEC-sqlite-metadata.history.md  DEC-sqlite-metadata.md  DEC-sse-progress.history.md  DEC-sse-progress.md  DEC-text-preprocessing-pipeline.history.md  DEC-text-preprocessing-pipeline.md  DEC-transformers-5x-baseline.history.md  DEC-tts-as-backend-module.md  (+9 more)
3-code/: CLAUDE.code.md  tasks.md
3-code/backend/: CLAUDE.component.md  README.voice-clone-script.md  pyproject.toml
3-code/backend/config/preprocessing/: README.md  domain_dictionary.example.json
3-code/backend/src/local_tts/: __main__.py  app.py  config.py  db.py  spa.py  timeutils.py
3-code/backend/src/local_tts/api/: audiobooks.py  jobs.py  models.py  playback.py  preprocess.py  router.py  sse.py
3-code/backend/src/local_tts/preprocessing/: __init__.py  abbreviation_expansion.py  layout_repair.py  numeric_symbolic_verbalization.py  pipeline.py  profiles.py  sentence_segmentation.py  service.py  stages.py  unicode_sanitization.py
3-code/backend/src/local_tts/scripts/: __init__.py  generate_voice_clone_prompt.py
3-code/backend/src/local_tts/services/: job_service.py  library_service.py  model_service.py  playback_service.py
3-code/backend/src/local_tts/tts/: __init__.py  chapter_parser.py  engine.py  ffmpeg_validator.py  gpu_validator.py  model_loader.py  synthesizer.py
3-code/backend/src/local_tts/tts/adapters/: __init__.py  cosyvoice3.py  f5_tts.py  fish_s2_pro.py  higgs_audio_v3.py  kokoro.py  moss_ttsd.py  qwen3_tts.py  voxcpm2.py  xtts_v2.py
3-code/backend/tests/: conftest.py  test_adapters.py  test_app.py  test_chapter_parser.py  test_config.py  test_cosyvoice3_adapter.py  test_db.py  test_db_integration.py  test_f5_tts_adapter.py  test_ffmpeg_validator.py  test_fish_s2_pro_adapter.py  test_generate_voice_clone_prompt_script.py  test_gpu_validator.py  test_higgs_audio_v3_adapter.py  test_job_progress_sse.py  test_job_service.py  test_jobs_api.py  test_kokoro_adapter.py  test_library_api.py  test_library_service.py  test_model_api.py  test_model_loader.py  test_model_service.py  test_moss_ttsd_adapter.py  test_playback_position_api.py  test_preprocess_api.py  test_preprocessing_pipeline.py  test_preprocessing_profiles.py  test_preprocessing_service.py  test_preprocessing_stages.py  test_qwen3_tts_adapter.py  test_scaffold.py  test_sse.py  test_stage_abbreviation_expansion.py  test_stage_layout_repair.py  test_stage_numeric_symbolic_verbalization.py  test_stage_sentence_segmentation.py  test_stage_unicode_sanitization.py  test_startup_ffmpeg_check.py  test_startup_gpu_check.py  (+5 more)
4-deploy/: CLAUDE.deploy.md
(+44 files in other folders)
