[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-tts"
version = "0.1.0"
description = "Local TTS Web App — text-to-speech audiobook generation running locally"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.29",
    "torch>=2.10",
    "torchaudio>=2.10",  # must match torch major.minor — required by voxcpm
    # transformers 5.5+ is required by the MOSS-TTSD v1.0 adapter (its remote
    # code + companion audio tokenizer target transformers 5.x) and by the
    # upcoming Higgs Audio v3 adapter (>=5.5). This dropped qwen-tts, which
    # hard-pinned transformers==4.57.3 (DEC-transformers-5x-baseline).
    "transformers>=5.5",
    "huggingface-hub>=0.21",
    "pydub>=0.25",
    "numpy>=1.24",
    "num2words>=0.5.10",  # language-aware number/ordinal/year spelling for the preprocessing pipeline (LGPL, FOSS)
    "kokoro>=0.9.2",
    "voxcpm>=2.0.3",  # VoxCPM2 adapter (openbmb/VoxCPM2), Apache-2.0/FOSS
]

[project.optional-dependencies]
flash = [
    "flash-attn>=2.0",
]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
