[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-tts"
version = "0.1.0"
description = "Local TTS Web App — text-to-speech audiobook generation running locally"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.29",
    "torch>=2.10",
    "torchaudio>=2.10",  # must match torch major.minor — required by voxcpm
    # transformers baseline is currently EXPLORATORY / in flux (DEC-transformers-5x-baseline,
    # 2026-06-21): different priority models need mutually-exclusive majors and one
    # environment cannot host both —
    #   • MOSS-TTSD v1.0 / Higgs Audio v3 require transformers >=5.0 / >=5.5
    #   • Fish Audio S2-Pro (fish-speech v2.x) hard-pins transformers <=4.57.3 (and torch==2.8.0)
    # The pin is therefore widened so the operator can install the version the model
    # under exploration needs (downgrade to 4.57.3 for fish-speech, upgrade to 5.x for
    # MOSS-TTSD/Higgs). To be re-fixed to a single stable baseline later (user choice).
    "transformers>=4.38",
    "huggingface-hub>=0.21",
    "pydub>=0.25",
    "numpy>=1.24",
    "num2words>=0.5.10",  # language-aware number/ordinal/year spelling for the preprocessing pipeline (LGPL, FOSS)
    "kokoro>=0.9.2",
    "voxcpm>=2.0.3",  # VoxCPM2 adapter (openbmb/VoxCPM2), Apache-2.0/FOSS
]

[project.optional-dependencies]
flash = [
    "flash-attn>=2.0",
]
dev = [
    "pytest>=8.0",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
